--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,18 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
     ports:
-      - "54333:5432"
+      - "5432:5432"
+
+  redis:
+    image: redis:7-alpine
+    command: redis-server
+    volumes:
+      - redis_data:/var/lib/redis
+      - redis_config:/usr/local/etc/redis/redis.conf
+    ports:
+      - "6379:6379"
 
 volumes:
   postgres_data:
+  redis_data:
+  redis_config:
