MobileBackend: redis pub & refactor & logger

--- a/MobileBackend/src/main/resources/application-docker.conf
+++ b/MobileBackend/src/main/resources/application-docker.conf
@@ -14,11 +14,11 @@ jwt {
 
 storage {
   driver = "org.postgresql.Driver"
-  url = "jdbc:postgresql://localhost:5432/smarthome"
+  url = "jdbc:postgresql://postgres:5432/smarthome"
   user = "postgres"
   password = "postgres"
 }
 
 redis {
-  url = "redis://localhost:6379"
+  url = "redis://redis:6379"
 }
