--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,9 @@ services:
     platform: "linux/amd64"
     ports:
       - "8080:8080"
+    depends_on:
+      - postgres
+      - redis
 
   postgres:
     image: postgres:16-alpine
