docker: refactor compose config

--- a/MobileBackend/src/main/resources/application-docker.conf
+++ b/MobileBackend/src/main/resources/application-docker.conf
@@ -16,7 +16,7 @@ storage {
   driver = "org.postgresql.Driver"
   url = "jdbc:postgresql://postgres:5432/smarthome"
   user = "postgres"
-  password = "postgres"
+  password = "zB0D2z9e@9*["
 }
 
 redis {
