--- a/DbService/src/main/resources/application.conf
+++ b/DbService/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 ktor {
   deployment {
-    port = 8060
+    port = 8080
   }
   application {
     modules = [ru.ifmo.se.ApplicationKt.module]
@@ -9,7 +9,7 @@ ktor {
 
 storage {
     clickhouse {
-        url = "http://clickhouse-server:8123"
+        url = "http://localhost:8123"
     }
     redis {
       url = "redis://localhost:6379"
