--- a/RequestMaker/src/main/resources/application-docker.conf
+++ b/RequestMaker/src/main/resources/application-docker.conf
@@ -6,3 +6,9 @@ ktor {
     modules = [com.example.ApplicationKt.module]
   }
 }
+
+requestMaker {
+    delay = 5
+    clientsCount = 5
+    url = "http://mobile-backend:8080/api"
+}
