--- a/RequestMaker/src/main/resources/application.conf
+++ b/RequestMaker/src/main/resources/application.conf
@@ -6,3 +6,9 @@ ktor {
     modules = [com.example.ApplicationKt.module]
   }
 }
+
+requestMaker {
+    delay = 5
+    clientsCount = 5
+    url = "http://localhost:8080/api"
+}
