add-clients-count-config

--- a/Emulation/src/main/resources/application.conf
+++ b/Emulation/src/main/resources/application.conf
@@ -12,6 +12,10 @@ redis {
   url = "redis://localhost:6379"
 }
 
+emulation {
+  clientsCount = 10000
+}
+
 logger {
   url = "http://localhost:8070/log"
 }
