Emulation: clients count

--- a/Emulation/src/main/resources/application-docker.conf
+++ b/Emulation/src/main/resources/application-docker.conf
@@ -11,6 +11,10 @@ redis {
   url = "redis://redis:6379"
 }
 
+emulation {
+  clientsCount = 10000
+}
+
 logger {
   url = "http://log-backend:8070/log"
 }
